--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,6 +23,9 @@ jobs:
     - name: build Receiver
       run: g++ -Wall -Wextra -Werror --coverage -o ReceiverExe Receiver/Receiver.cpp
       
+    - name: build ReceiverTest
+      run: g++ -Wall -Wextra -Werror --coverage -o ReceiverTest Receiver/ReceiverTest.cpp
+      
     - name: static analysis
       run: cppcheck --enable=all --error-exitcode=1 .
       
