--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -30,4 +30,4 @@ jobs:
       run: gcov -r Sender/Sender.cpp
       
     - name: coverage report Receiver
-      run: gcov -r Receiver/Receiver.cpp
+      run: gcov -r Receiver.cpp
