--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,7 +27,7 @@ jobs:
       run: ./ReceiverTestExe
     
     - name: coverage report Sender
-      run: gcov -r Sender/Sender.cpp
+      run: gcov -r Sender.cpp
       
     - name: coverage report Receiver
       run: gcov -r Receiver.cpp
